--- a/products/package.json
+++ b/products/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "SET NODE_ENV=dev & nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
